substrate/frame/support/test/tests/pallet_ui/type_value_error_in_block.stderr
error[E0599]: no function or associated item named `new` found for type `u32` in the current scope
  --> tests/pallet_ui/type_value_error_in_block.rs:37:8
   |
37 |         u32::new()
   |              ^^^ function or associated item not found in `u32`
   |
help: there is a method `ne` with a similar name, but with different arguments
  --> $RUST/core/src/cmp.rs
   |
   |     fn ne(&self, other: &Rhs) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
